--- a/DocumentManagementSystem/Views/DocumentType/GetDocumentTypeList.cshtml
+++ b/DocumentManagementSystem/Views/DocumentType/GetDocumentTypeList.cshtml
@@ -1,32 +1,127 @@
 ﻿@using EntityLayer.Concrete
 @model List<DocumentType>
 
+
 @{
     ViewBag.Title = "GetDocumentTypeList";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<table class="table table-bordered">
-    <tr>
-        <th>ID</th>
-        <th>Belge Adı</th>
-        <th>Belge Yazısı</th>
-        <th>İmza Adedi</th>
-        <th>Oluşturma Zamanı</th>
-        <th>Durum</th>
-    </tr>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>@item.DocumentTypeID</td>
-            <td>@item.DocumentTypeName</td>
-            <td>@item.DocumentTypeText</td>
-            <td>@item.DocumentTypeNumSignature</td>
-            <td>@item.DocumentCreateDate</td>
-            <td>@item.DocumentTypeStatus</td>
+@{
+    string statusColor = "";
+    string statusText = "";
+ }
 
-        </tr>
-    }
-</table>
-<br />
+<!DOCTYPE html>
+<html>
+
+<body class="hold-transition sidebar-mini">
+    <!-- Content Header (Page header) -->
+    <!-- Main content -->
+    <section class="content">
+        <!-- Default box -->
+        <div class="card">
+            <div class="card-header">
+                <h3 class="card-title">Dosya Türü İşlemleri</h3>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="card-body p-0">
+                <table class="table table-striped projects">
+                    <thead>
+                        <tr>
+                            <th style="width: 1%">
+                                #
+                            </th>
+                            <th style="width: 10%">
+                                Dosya Türü
+                            </th>
+                            <th style="width: 20%">
+                                Dosya Yazısı
+                            </th>
+                            <th style="width: 10%" class="text-center">
+                                Durum
+                            </th>
+                            <th style="width: 8%" class="text-center">
+                                Gereken İmza Adedi
+                            </th>
+                            <th style="width: 15%" class="text-center">
+                                İşlemler
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+
+                            if (item.DocumentTypeStatus)
+                            {
+                                statusColor = "badge badge-info";
+                                statusText = "Aktif";
+                            }
+                            else
+                            {
+                                statusColor = "badge badge-danger";
+                                statusText = "Pasif";
+                            }
+
+
+                            <tr>
+                                <td>
+                                    @item.DocumentTypeID
+                                </td>
+                                <td>
+                                    <a>
+                                        @item.DocumentTypeName
+                                    </a>
+                                    <br />
+                                    <small>
+                                        @(((DateTime)item.DocumentCreateDate).ToString("dd-MMM-yyyy"))
+                                    </small>
+                                </td>
+                                <td>
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            @*<img alt="Avatar" class="table-avatar" src="@item.">*@
+                                            <p>@item.DocumentTypeText</p>
+                                        </li>
+                                    </ul>
+                                </td>
+                                <td class="project-state">
+                                    <span class="@statusColor">@statusText</span>
+                                </td>
+                                <td class="project-state">
+                                    <p>@item.DocumentTypeNumSignature</p>
+                                </td>
+                                <td class="project-actions text-right">
+                                    <a class="btn btn-info btn-sm" href="/DocumentType/EditDocumentType/@item.DocumentTypeID">
+                                        <i class="fas fa-pencil-alt">
+                                        </i>
+                                        Düzenle
+                                    </a>
+                                    <a class="btn btn-danger btn-sm" href="/DocumentType/StatusChange/@item.DocumentTypeID">
+                                        <i class="fas fa-trash">
+                                        </i>
+                                        @(item.DocumentTypeStatus ? "Pasifleştir" : "Aktifleştir")
+                                    </a>
+                                </td>
+                            </tr>
+                        }
+
+                    </tbody>
+                </table>
+            </div>
+            <!-- /.card-body -->
+        </div>
+        <!-- /.card -->
+    </section>
+</body>
+</html>
+
 <a class="btn btn-primary" href="/DocumentType/AddDocumentType">Yeni Dosya Türü</a>
