--- a/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -41,9 +41,9 @@ to get the desired effect
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="index3.html" class="brand-link">
-                <img src="~/AdminLTE-3.0.4/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+                <img src="~/AdminLTE-3.0.4/dist/img/bozok.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">BOZOK BYS</span>
             </a>
 
             <!-- Sidebar -->
