--- a/DocumentManagementSystem/Views/Student/StudentList.cshtml
+++ b/DocumentManagementSystem/Views/Student/StudentList.cshtml
@@ -1,8 +1,10 @@
 ﻿@using EntityLayer.Concrete
-@model List<Admin>
+@model List<Student>
+
+
 
 @{
-    ViewBag.Title = "AdminList";
+    ViewBag.Title = "StudentList";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -10,10 +12,11 @@
     <div class="card-header">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Admin İşlemleri</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Admin Listesi</li>
+            <li class="breadcrumb-item active" aria-current="page">Admin Ekleme</li>
         </ol>
     </div>
 </div>
+
 
 <div class="card bg-light">
     <div class="card-body">
@@ -22,7 +25,7 @@
             <tr>
                 <th>#</th>
                 <th>Ad Soyad</th>
-                <th>Mail</th>
+                <th>Numara</th>
                 <th>Yetki</th>
                 <th>İmza</th>
                 <th>Durum</th>
@@ -31,7 +34,8 @@
             </tr>
             @foreach (var admin in Model)
             {
-                <tr>
+                //Öğrenciye tanımlanmış dosyaları listeleyecek method
+               /* <tr>
                     <th>@admin.AdminID</th>
                     <td>@admin.AdminName @admin.AdminSurmane</td>
                     <td>@admin.AdminMail</td>
@@ -40,11 +44,10 @@
                     <td>@(admin.AdminStatus ? "Aktif" : "Pasif" )</td>
 
                     <td style="text-align:center"><a href="/Admin/AdminUpdate/@admin.AdminID" class="btn btn-warning">Güncelle</a></td>
-                </tr>
+                </tr>*/
             }
         </table>
 
 
     </div>
 </div>
-
