--- a/DocumentManagementSystem/Views/Student/StudentList.cshtml
+++ b/DocumentManagementSystem/Views/Student/StudentList.cshtml
@@ -11,8 +11,8 @@
 <div class="card text-bg-light ">
     <div class="card-header">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Admin İşlemleri</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Admin Ekleme</li>
+            <li class="breadcrumb-item"><a href="#">Öğrenci İşlemleri</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Öğrenci Listeleme</li>
         </ol>
     </div>
 </div>
@@ -25,27 +25,30 @@
             <tr>
                 <th>#</th>
                 <th>Ad Soyad</th>
-                <th>Numara</th>
-                <th>Yetki</th>
-                <th>İmza</th>
-                <th>Durum</th>
+                <th>Numara/Mail</th>
+                <th>Tanımlanmış Belgeler</th>
                 <th>Güncelle</th>
 
             </tr>
-            @foreach (var admin in Model)
-            {
-                //Öğrenciye tanımlanmış dosyaları listeleyecek method
-               /* <tr>
-                    <th>@admin.AdminID</th>
-                    <td>@admin.AdminName @admin.AdminSurmane</td>
-                    <td>@admin.AdminMail</td>
-                    <td>@(admin.AdminAuthorization ? "Üst Düzey" : "Normal")</td>
-                    <td><img src="@(admin.AdminSignatureImage != null ? admin.AdminSignatureImage  : "/image/site/none.png" )" height="50" width="50" alt="Admin İmza"></td>
-                    <td>@(admin.AdminStatus ? "Aktif" : "Pasif" )</td>
+            @{
+                    int i = 0;
+                    foreach (var student in Model)
+                    {
+                    i++;
+                        <tr>
 
-                    <td style="text-align:center"><a href="/Admin/AdminUpdate/@admin.AdminID" class="btn btn-warning">Güncelle</a></td>
-                </tr>*/
+                            <td>
+                                @i
+                            </td>
+                            <td>@student.StudentName @student.StudentSurname</td>
+                            <td>@(student.StudentUniversityRegistered ? student.StudentNo : student.StudentMail)</td>
+                            <td style="text-align:center "><a href="/Admin/StudentUpdate/@student.StudentID" class="btn btn-success">Tanımlanmış Belgeler</a></td>
+                            <td style="text-align:center"><a href="/Admin/StudentUpdate/@student.StudentID" class="btn btn-warning">Güncelle</a></td>
+                        </tr>
+                }
+
             }
+
         </table>
 
 
